--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="notes_no">Notes no</string>
     <string name="attantion">Attantion!!!</string>
     <string name="file_name">note_with_title_list</string>
+    <string name="to_retry">To retry</string>
 </resources>
